--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         function showResult() {
           var searchQuery = document.getElementById('search').value;
           if (searchQuery) {
-            document.getElementById('result').innerHTML = `Yiğit hacking işlerini seviyor <3`;
+            document.getElementById('result').innerHTML = `made in: yigitstudiocode.neocities.org`;
           }
         }
         document.addEventListener('click', function(event) {
